--- a/Backend/astraScriptum/src/main/resources/application.properties
+++ b/Backend/astraScriptum/src/main/resources/application.properties
@@ -2,3 +2,20 @@ spring.application.name=astraScriptum
 #spring.security.user.name=admin
 #spring.security.user.password=admin
 #spring.security.user.roles=USER
+
+spring.datasource.url=jdbc:postgresql://dpg-d4p23te3jp1c73dqdjb0-a.virginia-postgres.render.com:5432/astrascriptum_db
+spring.datasource.username=astrascriptum_db_user
+spring.datasource.password=ajWRrprG8F0FsJyMVDZX6R1K8xFPYHuq
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+jwt.secret=astraScriptumSuperSecretKey2025
+# 1 jour en millisecondes
+jwt.expiration=86400000
